get the details of the returned string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=work-of-the-day-api
 
 server.port=8080
 
-# External API Base URL
+# Random Word API
 external.api.base-url=https://random-word-api.herokuapp.com
+
+# Dictionary API
+external.dictionary-api.base-url=https://api.dictionaryapi.dev/api/v2/entries
